--- a/en/toloka-apps/api/ref.yaml
+++ b/en/toloka-apps/api/ref.yaml
@@ -169,7 +169,13 @@ paths:
         Returns the list of all the currently available projects. You can also filter this list using the query parameters.
 
 
-        <div class="yfm-note yfm-accent-tip" note-type="tip"><p><strong>Try our <a href="https://toloka.ai/docs/api/apps-reference/#get-/app-projects" target="_blank" rel="noreferrer noopener">new API reference</a>:</strong> more parameter details, request/response examples, and code samples in various programming languages.</p></div>
+        {% note tip %}
+
+
+        **Try our [new API reference](https://toloka.ai/docs/api/apps-reference/#get-/app-projects):** more parameter details, request/response examples, and code samples in various programming languages.
+
+
+        {% endnote %}
       responses:
         '200':
           content:
@@ -186,7 +192,13 @@ paths:
         Creates a project with the parameters specified in the request.
 
 
-        <div class="yfm-note yfm-accent-tip" note-type="tip"><p><strong>Try our <a href="https://toloka.ai/docs/api/apps-reference/#post-/app-projects" target="_blank" rel="noreferrer noopener">new API reference</a>:</strong> more parameter details, request/response examples, and code samples in various programming languages.</p></div>
+        {% note tip %}
+
+
+        **Try our [new API reference](https://toloka.ai/docs/api/apps-reference/#post-/app-projects):** more parameter details, request/response examples, and code samples in various programming languages.
+
+
+        {% endnote %}
       requestBody:
         description: Parameters of the new project.
         required: true
@@ -211,7 +223,13 @@ paths:
         Displays the detailed information about the project with the ID specified in the request.
 
 
-        <div class="yfm-note yfm-accent-tip" note-type="tip"><p><strong>Try our <a href="https://toloka.ai/docs/api/apps-reference/#get-/app-projects/-app_project_id-" target="_blank" rel="noreferrer noopener">new API reference</a>:</strong> more parameter details, request/response examples, and code samples in various programming languages.</p></div>
+        {% note tip %}
+
+
+        **Try our [new API reference](https://toloka.ai/docs/api/apps-reference/#get-/app-projects/-app_project_id-):** more parameter details, request/response examples, and code samples in various programming languages.
+
+
+        {% endnote %}
       parameters:
       - name: app_project_id
         in: path
@@ -281,7 +299,13 @@ paths:
         Changes the project status to `ARCHIVE`.
 
 
-        <div class="yfm-note yfm-accent-tip" note-type="tip"><p><strong>Try our <a href="https://toloka.ai/docs/api/apps-reference/#post-/app-projects/-app_project_id-/archive" target="_blank" rel="noreferrer noopener">new API reference</a>:</strong> more parameter details, request/response examples, and code samples in various programming languages.</p></div>
+        {% note tip %}
+
+
+        **Try our [new API reference](https://toloka.ai/docs/api/apps-reference/#post-/app-projects/-app_project_id-/archive):** more parameter details, request/response examples, and code samples in various programming languages.
+
+
+        {% endnote %}
       parameters:
         - name: app_project_id
           in: path
@@ -303,7 +327,13 @@ paths:
         Changes the project status to the last one it had before archiving.
 
 
-        <div class="yfm-note yfm-accent-tip" note-type="tip"><p><strong>Try our <a href="https://toloka.ai/docs/api/apps-reference/#post-/app-projects/-app_project_id-/unarchive" target="_blank" rel="noreferrer noopener">new API reference</a>:</strong> more parameter details, request/response examples, and code samples in various programming languages.</p></div>
+        {% note tip %}
+
+
+        **Try our [new API reference](https://toloka.ai/docs/api/apps-reference/#post-/app-projects/-app_project_id-/unarchive):** more parameter details, request/response examples, and code samples in various programming languages.
+
+
+        {% endnote %}
       parameters:
         - name: app_project_id
           in: path
@@ -326,7 +356,13 @@ paths:
         in the request.
 
 
-        <div class="yfm-note yfm-accent-tip" note-type="tip"><p><strong>Try our <a href="https://toloka.ai/docs/api/apps-reference/#get-/app-projects/-app_project_id-/items/-item_id-" target="_blank" rel="noreferrer noopener">new API reference</a>:</strong> more parameter details, request/response examples, and code samples in various programming languages.</p></div>
+        {% note tip %}
+
+
+        **Try our [new API reference](https://toloka.ai/docs/api/apps-reference/#get-/app-projects/-app_project_id-/items/-item_id-):** more parameter details, request/response examples, and code samples in various programming languages.
+
+
+        {% endnote %}
       parameters:
         - name: app_project_id
           in: path
@@ -364,7 +400,13 @@ paths:
         request.
 
 
-        <div class="yfm-note yfm-accent-tip" note-type="tip"><p><strong>Try our <a href="https://toloka.ai/docs/api/apps-reference/#get-/app-projects/-app_project_id-/items" target="_blank" rel="noreferrer noopener">new API reference</a>:</strong> more parameter details, request/response examples, and code samples in various programming languages.</p></div>
+        {% note tip %}
+
+
+        **Try our [new API reference](https://toloka.ai/docs/api/apps-reference/#get-/app-projects/-app_project_id-/items):** more parameter details, request/response examples, and code samples in various programming languages.
+
+
+        {% endnote %}
       parameters:
         - name: app_project_id
           in: path
@@ -513,7 +555,13 @@ paths:
         Adds new item to a batch in the project with the ID specified in the request.
 
 
-        <div class="yfm-note yfm-accent-tip" note-type="tip"><p><strong>Try our <a href="https://toloka.ai/docs/api/apps-reference/#post-/app-projects/-app_project_id-/items" target="_blank" rel="noreferrer noopener">new API reference</a>:</strong> more parameter details, request/response examples, and code samples in various programming languages.</p></div>
+        {% note tip %}
+
+
+        **Try our [new API reference](https://toloka.ai/docs/api/apps-reference/#post-/app-projects/-app_project_id-/items):** more parameter details, request/response examples, and code samples in various programming languages.
+
+
+        {% endnote %}
       parameters:
         - name: app_project_id
           in: path
@@ -564,7 +612,13 @@ paths:
         with the maximum of 10,000 items per request.
 
 
-        <div class="yfm-note yfm-accent-tip" note-type="tip"><p><strong>Try our <a href="https://toloka.ai/docs/api/apps-reference/#post-/app-projects/-app_project_id-/items/bulk" target="_blank" rel="noreferrer noopener">new API reference</a>:</strong> more parameter details, request/response examples, and code samples in various programming languages.</p></div>
+        {% note tip %}
+
+
+        **Try our [new API reference](https://toloka.ai/docs/api/apps-reference/#post-/app-projects/-app_project_id-/items/bulk):** more parameter details, request/response examples, and code samples in various programming languages.
+
+
+        {% endnote %}
       parameters:
         - name: app_project_id
           in: path
@@ -622,7 +676,13 @@ paths:
         with the ID specified in the request.
 
 
-        <div class="yfm-note yfm-accent-tip" note-type="tip"><p><strong>Try our <a href="https://toloka.ai/docs/api/apps-reference/#get-/app-projects/-app_project_id-/batches" target="_blank" rel="noreferrer noopener">new API reference</a>:</strong> more parameter details, request/response examples, and code samples in various programming languages.</p></div>
+        {% note tip %}
+
+
+        **Try our [new API reference](https://toloka.ai/docs/api/apps-reference/#get-/app-projects/-app_project_id-/batches):** more parameter details, request/response examples, and code samples in various programming languages.
+
+
+        {% endnote %}
       parameters:
         - name: app_project_id
           in: path
@@ -769,7 +829,13 @@ paths:
         It also sets the created batch priority for labeling based on the `priority_order` value specified in the request: `ONE` (meaning the highest priority), `TWO`, `THREE`, `FOUR`, `FIVE` (for the lowest priority, default value). If you do not specify the `priority_order` value the batch will be created with `priority_order = FIVE`.
 
 
-        <div class="yfm-note yfm-accent-tip" note-type="tip"><p><strong>Try our <a href="https://toloka.ai/docs/api/apps-reference/#post-/app-projects/-app_project_id-/batches" target="_blank" rel="noreferrer noopener">new API reference</a>:</strong> more parameter details, request/response examples, and code samples in various programming languages.</p></div>
+        {% note tip %}
+
+
+        **Try our [new API reference](https://toloka.ai/docs/api/apps-reference/#post-/app-projects/-app_project_id-/batches):** more parameter details, request/response examples, and code samples in various programming languages.
+
+
+        {% endnote %}
       parameters:
         - name: app_project_id
           in: path
@@ -827,7 +893,13 @@ paths:
         Starts processing the batch with the ID specified in the request. This batch processing is applicable for solutions which use **synchronous protocols only**.
 
 
-        <div class="yfm-note yfm-accent-tip" note-type="tip"><p><strong>Try our <a href="https://toloka.ai/docs/api/apps-reference/#post-/app-projects/-app_project_id-/batches/sync" target="_blank" rel="noreferrer noopener">new API reference</a>:</strong> more parameter details, request/response examples, and code samples in various programming languages.</p></div>
+        {% note tip %}
+
+
+        **Try our [new API reference](https://toloka.ai/docs/api/apps-reference/#post-/app-projects/-app_project_id-/batches/sync):** more parameter details, request/response examples, and code samples in various programming languages.
+
+
+        {% endnote %}
       parameters:
         - name: app_project_id
           in: path
@@ -872,7 +944,13 @@ paths:
         in the request.
 
 
-        <div class="yfm-note yfm-accent-tip" note-type="tip"><p><strong>Try our <a href="https://toloka.ai/docs/api/apps-reference/#get-/app-projects/-app_project_id-/batches/-batch_id-" target="_blank" rel="noreferrer noopener">new API reference</a>:</strong> more parameter details, request/response examples, and code samples in various programming languages.</p></div>
+        {% note tip %}
+
+
+        **Try our [new API reference](https://toloka.ai/docs/api/apps-reference/#get-/app-projects/-app_project_id-/batches/-batch_id-):** more parameter details, request/response examples, and code samples in various programming languages.
+
+
+        {% endnote %}
       parameters:
         - name: app_project_id
           in: path
@@ -911,7 +989,13 @@ paths:
         For `priority_order`, `ONE` is the highest value, batch items which have this value will be sent for labeling first in the queue. The default value is `FIVE`. If you don't specify `name` or `priority_order` parameter values, they will not change.
 
 
-        <div class="yfm-note yfm-accent-tip" note-type="tip"><p><strong>Try our <a href="https://toloka.ai/docs/api/apps-reference/#patch-/app-projects/-app_project_id-/batches/-batch_id-" target="_blank" rel="noreferrer noopener">new API reference</a>:</strong> more parameter details, request/response examples, and code samples in various programming languages.</p></div>
+        {% note tip %}
+
+
+        **Try our [new API reference](https://toloka.ai/docs/api/apps-reference/#patch-/app-projects/-app_project_id-/batches/-batch_id-):** more parameter details, request/response examples, and code samples in various programming languages.
+
+
+        {% endnote %}
       parameters:
         - name: app_project_id
           in: path
@@ -956,7 +1040,13 @@ paths:
         batch processing starts asynchronously.
 
 
-        <div class="yfm-note yfm-accent-tip" note-type="tip"><p><strong>Try our <a href="https://toloka.ai/docs/api/apps-reference/#post-/app-projects/-app_project_id-/batches/-batch_id-/start" target="_blank" rel="noreferrer noopener">new API reference</a>:</strong> more parameter details, request/response examples, and code samples in various programming languages.</p></div>
+        {% note tip %}
+
+
+        **Try our [new API reference](https://toloka.ai/docs/api/apps-reference/#post-/app-projects/-app_project_id-/batches/-batch_id-/start):** more parameter details, request/response examples, and code samples in various programming languages.
+
+
+        {% endnote %}
       parameters:
         - name: app_project_id
           in: path
@@ -986,7 +1076,13 @@ paths:
         status.
 
 
-        <div class="yfm-note yfm-accent-tip" note-type="tip"><p><strong>Try our <a href="https://toloka.ai/docs/api/apps-reference/#post-/app-projects/-app_project_id-/batches/-batch_id-/stop" target="_blank" rel="noreferrer noopener">new API reference</a>:</strong> more parameter details, request/response examples, and code samples in various programming languages.</p></div>
+        {% note tip %}
+
+
+        **Try our [new API reference](https://toloka.ai/docs/api/apps-reference/#post-/app-projects/-app_project_id-/batches/-batch_id-/stop):** more parameter details, request/response examples, and code samples in various programming languages.
+
+
+        {% endnote %}
       parameters:
         - name: app_project_id
           in: path
@@ -1016,7 +1112,13 @@ paths:
         `STOPPED` status.
 
 
-        <div class="yfm-note yfm-accent-tip" note-type="tip"><p><strong>Try our <a href="https://toloka.ai/docs/api/apps-reference/#post-/app-projects/-app_project_id-/batches/-batch_id-/resume" target="_blank" rel="noreferrer noopener">new API reference</a>:</strong> more parameter details, request/response examples, and code samples in various programming languages.</p></div>
+        {% note tip %}
+
+
+        **Try our [new API reference](https://toloka.ai/docs/api/apps-reference/#post-/app-projects/-app_project_id-/batches/-batch_id-/resume):** more parameter details, request/response examples, and code samples in various programming languages.
+
+
+        {% endnote %}
       parameters:
         - name: app_project_id
           in: path
@@ -1103,7 +1205,13 @@ paths:
         Returns the list of all the available project templates.
 
 
-        <div class="yfm-note yfm-accent-tip" note-type="tip"><p><strong>Try our <a href="https://toloka.ai/docs/api/apps-reference/#get-/apps" target="_blank" rel="noreferrer noopener">new API reference</a>:</strong> more parameter details, request/response examples, and code samples in various programming languages.</p></div>
+        {% note tip %}
+
+
+        **Try our [new API reference](https://toloka.ai/docs/api/apps-reference/#get-/apps):** more parameter details, request/response examples, and code samples in various programming languages.
+
+
+        {% endnote %}
       responses:
         '200':
           content:
@@ -1123,7 +1231,13 @@ paths:
         Returns the detailed information about the project template with the ID specified in the request.
 
 
-        <div class="yfm-note yfm-accent-tip" note-type="tip"><p><strong>Try our <a href="https://toloka.ai/docs/api/apps-reference/#get-/apps/-app_id-" target="_blank" rel="noreferrer noopener">new API reference</a>:</strong> more parameter details, request/response examples, and code samples in various programming languages.</p></div>
+        {% note tip %}
+
+
+        **Try our [new API reference](https://toloka.ai/docs/api/apps-reference/#get-/apps/-app_id-):** more parameter details, request/response examples, and code samples in various programming languages.
+
+
+        {% endnote %}
       parameters:
         - name: app_id
           in: path
