--- a/redirects.yaml
+++ b/redirects.yaml
@@ -93,3 +93,41 @@ en:
     to: /guide/tutorials/video-moderation.md
   - from: /guide/concepts/walk.md
     to: /guide/tutorials/walk.md
+  - from: /guide/concepts/usecases.md
+    to: /guide/tutorials/usecases.md
+  - from: /guide/concepts/image-segmentation-overview.md
+    to: /guide/tutorials/image-segmentation-overview.md
+  - from: /guide/concepts/image-segmentation-project1.md
+    to: /guide/tutorials/image-segmentation-project1.md
+  - from: /guide/concepts/image-segmentation-project2.md
+    to: /guide/tutorials/image-segmentation-project2.md
+  - from: /guide/concepts/image-segmentation-project3.md
+    to: /guide/tutorials/image-segmentation-project3.md
+  - from: /guide/concepts/image-segmentation-appendix.md
+    to: /guide/tutorials/image-segmentation-appendix.md
+  - from: /guide/concepts/data-collection.md
+    to: /guide/tutorials/data-collection.md
+  - from: /guide/concepts/contain_item.md
+    to: /guide/tutorials/contain_item.md
+  - from: /guide/concepts/find_an_item_in_store.md
+    to: /guide/tutorials/find_an_item_in_store.md
+  - from: /guide/concepts/item_look_similar.md
+    to: /guide/tutorials/item_look_similar.md
+  - from: /guide/concepts/item_more_similar.md
+    to: /guide/tutorials/item_more_similar.md
+  - from: /guide/concepts/appendix-expanded-code.md
+    to: /guide/tutorials/appendix-expanded-code.md
+  - from: /guide/concepts/advanced-features.md
+    to: /guide/tutorials/advanced-features.md
+  - from: /guide/concepts/advanced-features-button.md
+    to: /guide/tutorials/advanced-features-button.md
+  - from: /guide/concepts/advanced-features-attach.md
+    to: /guide/tutorials/advanced-features-attach.md
+  - from: /guide/concepts/advanced-features-input-data.md
+    to: /guide/tutorials/advanced-features-input-data.md
+  - from: /guide/concepts/advanced-features-show-pic.md
+    to: /guide/tutorials/advanced-features-show-pic.md
+  - from: /guide/concepts/advanced-features-input-string.md
+    to: /guide/tutorials/advanced-features-input-string.md
+  - from: /guide/concepts/advanced-features-input-selector.md
+    to: /guide/tutorials/advanced-features-input-selector.md
