--- a/en/_includes/template-builder-toc.yaml
+++ b/en/_includes/template-builder-toc.yaml
@@ -42,6 +42,8 @@ items:
             href: ../template-builder/templates/text-classification.md
           - name: Sentiment analysis & Content moderation
             href: ../template-builder/templates/content-moderation.md
+          - name: Named entity recognition
+            href: ../template-builder/templates/named-entity-recognition.md  
       - name: Audio
         items:
           - name: Audio transcription
